--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ agp = "8.13.0"
 coilCompose = "2.7.0"
 firebaseBom = "34.3.0"
 firebaseFirestoreKtx = "25.1.4"
+foundationText2 = "1.0.0-beta02"
 hiltAndroidCompiler = "2.57.2"
 hiltNavigationCompose = "1.3.0"
 kotlin = "2.2.20"
@@ -24,8 +25,10 @@ firebaseFirestoreKtxVersion = "26.0.0"
 googleFirebaseFirestoreKtx = "26.0.0"
 material3 = "1.4.0"
 uiTextGoogleFonts = "1.9.2"
+uiText = "1.9.3"
 
 [libraries]
+androidx-compose-foundation-text2 = { module = "androidx.compose.foundation:foundation-text2", version.ref = "foundationText2" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 androidx-material = { module = "androidx.compose.material:material", version.ref = "material" }
@@ -63,6 +66,7 @@ firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-fires
 google-firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "googleFirebaseFirestoreKtx" }
 material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 androidx-compose-ui-text-google-fonts = { group = "androidx.compose.ui", name = "ui-text-google-fonts", version.ref = "uiTextGoogleFonts" }
+androidx-compose-ui-text = { group = "androidx.compose.ui", name = "ui-text", version.ref = "uiText" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
